argocd-per-spoke-prototype/nginx-demo-local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-pull-model
spec:
  selector:
    app: nginx-demo-pull-model
  ports:
  - port: 8080
    targetPort: 8080
